	  support/regression/tests/bug-2373.c,
	  support/regression/tests/bug-2455.c,
	  support/regression/tests/bug-2497.c,
	  support/regression/tests/bug-716242.c,
	  support/regression/tests/bug1908493.c,
	  support/regression/tests/gcc-torture-execute-20030714-1.c,
	  support/regression/tests/gcc-torture-execute-980707-1.c:
	  Document why some regression tests are disabled for pdk.
	* device/include/mcs51/stc89.h:
	  Fix typos.
	* src/SDCCicode.c:
	  Fix bug #3290.

2023-02-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/rtrack.c: placed all comment emitting code in D(),
	  (_mcs51_rtrackUpdate): enabled literal mov to register part by removing D(),
	                         enabled tracking dptr by removing if(options.verboseAsm)
	* device/lib/ds390/Makefile.in,
	* device/lib/ds390/lcd390.c: removed buggy lcd390.c, the DS80C390 has no native LCD interface

2023-02-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCloop.c,
	  support/regression/tests/bug-3560.c:
	  Fix bug #3560.

2023-02-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/_minimal.c:
	  Pick minimal regression test from MP8 fork of sdcc to ease initial debugging of new ports.

2023-02-20 Felix Salfelder <felix AT salfelder.org>

	* Makefile.in:
	  fix literal sdcc-sdbinutils dep, towards fixing bug #3491.

2023-02-17 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/libcpp/files.cc:
	  Remove stray assert, fix bug #3483.

2023-02-16 Felix Salfelder <felix AT salfelder.org>

	* src/clean.mk: Delete Makefile target only.

2023-02-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCerr.h,
	  src/SDCCerr.c: changed possible to probable
	* src/SDCCast.c,
	  doc/sdccman.lyx: fixed spelling

2023-02-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Fix bug #3382.
	* support/regression/tests/*.c,
	  src/*:
	  Spelling fixes for comments, from patch #459 by Konstantin Kim.
